--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cytoscape-cola": "2.5.0",
     "cytoscape-dagre": "2.3.2",
     "cytoscape-euler": "1.2.2",
+    "cytoscape-expand-collapse": "^4.1.0",
     "cytoscape-fcose": "2.1.0",
     "cytoscape-spread": "3.0.0",
+    "cytoscape-undo-redo": "^1.3.3",
     "expo": "43.0.2",
     "graphql-tag": "2.12.6",
     "immer": "9.0.6",
